<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/palette1creme">

            <LinearLayout
                android:id="@+id/layout_wall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/palette1blue"
                android:gravity="center|bottom"
                android:orientation="vertical"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_wall_center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="50dp"
                android:background="@color/colorBackgroundWhite"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageview_profile_pic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:background="@color/colorBackgroundGrey"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_view_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fragment_profilepage_pp_title_1"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@id/imageview_profile_pic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/text_view_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/fragment_profilepage_pp_title_2"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_change_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profilepage_change_pp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/layout_wall_center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>