
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/scroll_view_main"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/palette1blue"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_homepage_search_box_title"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:layout_marginTop="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="16">

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <EditText
                            android:id="@+id/edit_text_word"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="14"
                            android:background="#FFFFFF"
                            android:imeOptions="actionDone"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fragment_homepage_search_button"
                        android:textSize="12sp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/fragment_homepage_header_greeting"
                    android:textSize="24sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.opengl.GLSurfaceView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:id="@+id/glSurface"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="You've learned"
                            android:fontFamily="@font/roboto_thin"
                            android:textSize="20sp"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/text_view_dashboard_target"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="100 unique words"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:fontFamily="@font/roboto_thin"
                            android:text="so far"
                            android:gravity="center"/>
                    </LinearLayout>
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragment_homepage_header_ongoing_challenge"
                        android:textSize="24sp"/>

                    <ImageView
                        android:id="@+id/image_view_add_challenge"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_circle_black_24dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_challenge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/challenge_item"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>